[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/pause/MainPauseTab.gd" type="Script" id=1]
[ext_resource path="res://resources/theme.tres" type="Theme" id=2]

[node name="MainPauseTab" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 464.0
margin_bottom = 254.0
custom_constants/separation = 26
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 448.0
margin_bottom = 23.0
text = "PAUSE_MESSAGE"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 176.0
margin_top = 49.0
margin_right = 272.0
margin_bottom = 189.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 96.0
margin_bottom = 42.0
rect_min_size = Vector2( 96, 0 )
focus_neighbour_top = NodePath("../../QuitButton")
focus_neighbour_bottom = NodePath("../RestartButton")
focus_next = NodePath("../RestartButton")
focus_previous = NodePath("../../QuitButton")
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 96.0
margin_bottom = 81.0
rect_min_size = Vector2( 96, 0 )
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../ResumeButton")
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 96.0
margin_bottom = 120.0
rect_min_size = Vector2( 96, 0 )
focus_neighbour_top = NodePath(".")
focus_neighbour_bottom = NodePath("../../QuitButton")
focus_next = NodePath("../../QuitButton")
focus_previous = NodePath("../RestartButton")
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_left = 176.0
margin_top = 215.0
margin_right = 272.0
margin_bottom = 238.0
rect_min_size = Vector2( 96, 0 )
focus_neighbour_top = NodePath("../VBoxContainer/SettingsButton")
focus_neighbour_bottom = NodePath("../VBoxContainer/ResumeButton")
focus_next = NodePath("../VBoxContainer/ResumeButton")
focus_previous = NodePath("../VBoxContainer/SettingsButton")
size_flags_horizontal = 4
text = "QUIT"
